<resources>
    <string name="app_name">炫云</string>
    <string name="log1">登录：</string>
    <string name="log2">注册：</string>
    <string name="username">用户名（手机号码）</string>
    <string name="password">密码</string>
    <string name="zhuce">请输入用户名和密码</string>
    <string name="zhuce2">确认</string>
    <string name="zhuce3">用户名或密码错误！</string>
    <string name="success1">登陆成功！</string>
    <string name="success2">注册成功！</string>
    <string name="ret1">返回登录界面</string>
    <string name="find">获取历史图片</string>
    <string name="first">请选择生成词云的文本来源：</string>
    <string name="first0">登录/注册：</string>
    <string name="c1">txt文件</string>
    <string name="c10">登录</string>
    <string name="c2">word文件</string>
    <string name="c20">注册</string>
    <string name="c3">url链接（功能尚未开放，敬请期待）</string>
    <string name="c4">直接输入文本（输入完毕请点击确认）</string>
    <string name="c5">语音输入</string>
    <string name="p11">上传txt文件</string>
    <string name="p12">上传Word文件</string>
    <string name="p13">输入URL地址</string>
    <string name="p14">点击确认</string>
    <string name="page2">请选择背景图片来源：</string>
    <string name="p21">从本地图片中选择</string>
    <string name="p22">从模板中选择</string>
    <string name="p211">从相册中选取</string>
    <string name="second">你</string>
    <string name="third">敬请期待</string>
    <string name="cong">词云图片:</string>
    <string name="diatit1">选择背景颜色</string>
    <string name="diatit2">选择词云色调</string>
    <string name="diatit3">选择字体</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back1">点击设置图片背景颜色</string>
    <string name="back2">点击设置词云色调</string>
    <string name="back3">点击设置字体</string>
    <string name="color1">viridis</string>
    <string name="color2">plasma</string>
    <string name="color3">magma</string>
    <string name="color4">inferno</string>
</resources>
