<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page2"
        android:textSize="25sp"
        />
    <RadioGroup
        android:id="@+id/RadioGroup02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/RadioButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/myradiobutton"
            android:textSize="20sp"
            android:text="@string/p21"/>
        <RadioButton
            android:id="@+id/RadioButton02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/myradiobutton"
            android:textSize="20sp"
            android:checked="true"
            android:text="@string/p22"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/fragmentContainer02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>